# unode

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  build.sh  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  shell.nix
crates/mgn/: Cargo.toml  README.md
crates/mgn/src/: main.rs  plugin_registry.rs  shell_registry.rs  tests.rs
crates/mugens-domain/: Cargo.toml  README.md
crates/mugens-domain/src/: lib.rs
crates/mugens-sdk/: Cargo.toml  README.md
crates/mugens-sdk/src/: lib.rs  permissions.rs
crates/renderer/src/: lib.rs  screen.rs  tui_shell.rs  util.rs
crates/tui-playground/: Cargo.toml  README.md
crates/tui-playground/src/: app.rs  main.rs  plugin_registry.rs  renderer.rs  route.rs  shell_registry.rs  tests.rs
crates/tui-renderer/: Cargo.toml  README.md
crates/tui-renderer/src/: lib.rs  recipes.rs  screen.rs
crates/tui-renderer/src/nodes/: status.rs
crates/unode/: Cargo.toml  README.md
crates/unode-devtools/: Cargo.toml
crates/unode-plugin-sdk/: Cargo.toml  README.md
crates/unode-plugin-sdk/src/: abi.rs  component.rs  host.rs  i18n.rs  lib.rs  manifest.rs  permissions.rs  state.rs
crates/unode-ratatui-renderer/: Cargo.toml  README.md
crates/unode-ratatui-renderer/src/: lib.rs  recipes.rs  tui_shell.rs
crates/unode-renderer/: Cargo.toml
crates/unode-renderer/src/: lib.rs
crates/unode-runtime/: Cargo.toml  README.md
crates/unode-runtime/src/: host.rs  lib.rs  registry.rs  runtime.rs  text.rs
crates/unode-runtime/tests/: manifest_to_routes.rs
crates/unode-sdk/: Cargo.toml  README.md
crates/unode-sdk/src/: abi.rs  host.rs  i18n.rs  lib.rs  manifest.rs  permissions.rs
crates/unode-tui-runtime/: Cargo.toml  README.md
crates/unode-tui-runtime/src/: bridge.rs  component_guest.rs  host_call.rs  lib.rs  loader.rs  memory.rs  session.rs  state.rs  wasmtime_guest.rs
crates/unode-tui-runtime/tests/: golden_component.rs
crates/unode-web-host/: Cargo.toml  README.md
crates/unode-web-host/src/: lib.rs  session.rs
crates/unode-web-host/tests/: reactive_slice.rs
crates/unode-web-runtime/: Cargo.toml  README.md
crates/unode-web-runtime/src/: bridge.rs  host_call.rs  lib.rs  loader.rs  memory.rs
docs/: ARCHITECTURAL-GAPS.md  ARCHITECTURE.md  AST.md  COMPONENT-MODEL.md  HOST-BRIDGE.md  I18N.md  IMPLEMENTATION.md  MIGRATION-STATUS.md  PERMISSIONS.md  PLUGIN-WASM-ABI.md  REACTIVITY.md  README.md  RENDERER.md  ROADMAP.md  RUNTIME-BOUNDARIES.md  RUNTIME.md  SLOT.md  TUI-RUNTIME-SESSIONS.md  UI-FLOW.md  WASM.md
examples/tui-ratatui/: Cargo.toml  README.md
examples/tui-ratatui/src/: app.rs  button.rs  main.rs
examples/web-react/: README.md  build.sh  package.json  tsconfig.json  vite.config.ts
examples/web-react/demo/: App.tsx  Button.tsx  index.html
examples/web-react/scripts/: smoke.mjs
examples/web-solid/: README.md  build.sh  package.json  tsconfig.json  vite.config.ts
examples/web-solid/demo/: App.tsx  Button.tsx  index.html  web_counter_plugin.wasm
examples/web-solid/scripts/: smoke.mjs
examples/web-svelte/: README.md  build.sh  package.json  tsconfig.json  vite.config.ts
examples/web-svelte/demo/: App.svelte  Button.svelte  index.html
examples/web-svelte/scripts/: smoke.mjs
examples/web-vanilla/: README.md  build.sh  package.json  tsconfig.json  vite.config.ts
examples/web-vanilla/demo/: App.ts  Button.ts  index.html  main.ts  runtime.ts
examples/web-vanilla/scripts/: smoke.mjs
examples/web-vue/: README.md  build.sh  package.json  tsconfig.json  vite.config.ts
examples/web-vue/demo/: App.ts  Button.vue  index.html  web_counter_plugin.wasm
examples/web-vue/pkg/: unode_web_host.d.ts  unode_web_host.js  unode_web_host_bg.wasm.d.ts
examples/web-vue/scripts/: smoke.mjs
plugins/actions/: Cargo.toml
plugins/actions/src/: lib.rs
plugins/counter/: Cargo.toml
plugins/counter/src/: lib.rs
plugins/host-components/: Cargo.toml
plugins/host-components/src/: lib.rs
plugins/layout/: Cargo.toml
plugins/layout/src/: lib.rs
plugins/playground-complex-layout/: Cargo.toml
plugins/playground-complex-layout/src/: lib.rs
plugins/playground-complex-state/: Cargo.toml
plugins/playground-complex-state/src/: lib.rs
plugins/playground-host-slot/: Cargo.toml
plugins/playground-host-slot/src/: lib.rs
plugins/playground-route-tabs/: Cargo.toml
plugins/playground-route-tabs/src/: lib.rs
plugins/playground-split-contributor/: Cargo.toml
plugins/playground-split-contributor/src/: lib.rs
plugins/playground-split-host/: Cargo.toml
plugins/playground-split-host/src/: lib.rs
plugins/route-tabs/: Cargo.toml
plugins/route-tabs/src/: lib.rs
plugins/sanity-check/: Cargo.toml  README.md
plugins/sanity-check/src/: lib.rs
plugins/slot-contributor/: Cargo.toml
plugins/slot-contributor/src/: lib.rs
plugins/slot-host/: Cargo.toml
plugins/state-collections/: Cargo.toml
plugins/web-counter/: Cargo.toml
runtimes/: README.md
runtimes/web-react/: README.md  build.sh  pnpm-lock.yaml  tsconfig.json  vite.config.ts
runtimes/web-svelte/: README.md  build.sh  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
ts-implementation/: README.md
ts-implementation/app-plugin-renderer/: CoreChildren.svelte  CoreUiRenderer.svelte  context.ts  resolve.ts
ts-implementation/app-plugin-shell/: ScreenHost.svelte  SlotRenderer.svelte
ts-implementation/app-shell/: AppHeader.svelte  AppMobileNavBar.svelte  AppSidebar.svelte  AppSidebarActions.svelte  AppSidebarContent.svelte  ContextDrawer.svelte  ContextSheet.svelte  QuickActionsFab.svelte  navItems.ts
ts-implementation/docs/: norcurses-ffi-renderer.md  open-tui.md  renderer.md  the-key-problem.md  tui-renderer.md
ts-implementation/plugins-bridge/: capabilities.ts  guard.ts  host.ts  hostApi.ts  models.ts  navigation.ts  rendererConfig.ts  runtimeInstance.ts
ts-implementation/unode/: index.ts  package.json  tsconfig.build.json
ts-implementation/web-react-runtime/: .gitignore  README.md  build.sh  package.json
website/: .gitignore  astro.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
wit/: unode-plugin.wit
(+217 files in other folders)
