[workspace]
members = [
  "crates/unode",
  "crates/unode-runtime",
  "crates/unode-sdk",
  "crates/unode-web-runtime",
  "crates/unode-web-host",
  "crates/unode-tui-runtime",
  "crates/renderer",
  "crates/mugens-domain",
  "crates/mugens-sdk",
  "crates/mgn",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
ratatui = "0.30"
crossterm = "0.29"
