[package]
name = "tui-playground"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
unode-ratatui-renderer = { path = "../unode-ratatui-renderer" }
unode-runtime = { path = "../unode-runtime" }
unode-tui-runtime = { path = "../unode-tui-runtime" }
unode-plugin-sdk = { path = "../unode-plugin-sdk" }
unode = { path = "../unode" }
anyhow.workspace = true
ratatui.workspace = true
crossterm.workspace = true
serde.workspace = true
serde_json.workspace = true
