[package]
name = "tui-renderer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
unode = { path = "../unode" }
unode-renderer = { path = "../unode-renderer" }
unode-runtime = { path = "../unode-runtime" }
ratatui.workspace = true
crossterm.workspace = true
anyhow.workspace = true
serde_json.workspace = true
