[package]
name = "unode-devtools"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
unode = { path = "../unode" }
unode-plugin-sdk = { path = "../unode-plugin-sdk" }
unode-tui-runtime = { path = "../unode-tui-runtime" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
