[package]
name = "unode-plugin-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
## Builds the Component Model (WIT) boundary instead of the raw ptr/len ABI.
component = ["dep:wit-bindgen"]

[dependencies]
wit-bindgen = { version = "0.59", optional = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
unode = { path = "../unode" }
