[package]
name = "unode-tui-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
unode-plugin-sdk = { path = "../unode-plugin-sdk" }
unode = { path = "../unode" }
unode-runtime = { path = "../unode-runtime" }
wasmtime = { version = "43", features = ["component-model"] }
