[package]
name = "web-counter-plugin"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
unode-plugin-sdk = { path = "../../crates/unode-plugin-sdk" }

[workspace]

[features]
## Build as a Component Model plugin instead of the raw ptr/len ABI.
component = ["unode-plugin-sdk/component"]
